[tool.poetry]
name = "genetic-algorithms"
version = "0.1.0"
description = "Modular Genetic Algorithm library for continuous optimization"
authors = ["samaypanwar"]
readme = "README.md"
packages = [{ include = "genetic_algorithms" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24"
matplotlib = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.0"
mypy = "^1.5"
papermill = {version = "^2.6.0", python = ">=3.10"}
ipykernel = {version = "^7.2.0", python = ">=3.10"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
